# context

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/src/commands/: index.rs  init.rs  mod.rs  serve.rs  status.rs  update.rs
crates/cli/tests/: cli_smoke.rs  hotwash_e2e.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  hash.rs  lib.rs  scope.rs  traits.rs  types.rs
crates/core/tests/: traits.rs  types.rs
crates/embed/: Cargo.toml
crates/embed/src/: fastembed.rs  lib.rs
crates/embed/tests/: fastembed_smoke.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs  pipeline.rs
crates/index/tests/: pipeline.rs
crates/index/tests/fixtures/minirepo/: a.ts  b.ts  c.css
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  server.rs
crates/mcp/tests/: mcp_smoke.rs
crates/parse/: Cargo.toml
crates/parse/src/: chunker.rs  css.rs  html.rs  json.rs  languages.rs  lib.rs  ts.rs
crates/parse/tests/: chunker.rs
crates/parse/tests/fixtures/: sample.css  sample.html  sample.json  sample.ts  sample.tsx
crates/query/: Cargo.toml
crates/query/src/: lib.rs  router.rs
crates/query/tests/: router.rs
crates/store/: Cargo.toml
crates/store/src/: lance.rs  lib.rs  redb_refs.rs
crates/store/tests/: lance_store.rs  redb_refs.rs
crates/symbol/: Cargo.toml
crates/symbol/src/: extractor.rs  lib.rs  tree_symbols.rs  tsserver.rs
crates/symbol/src/lsp/: client.rs  mod.rs
crates/symbol/src/lsp/launchers/: mod.rs  tsgo.rs
crates/symbol/tests/: lsp_client.rs  tree_symbols.rs  tsserver.rs
crates/symbol/tests/fixtures/ts_project/: a.ts
crates/watch/: Cargo.toml
crates/watch/src/: debounce.rs  lib.rs
crates/watch/tests/: watch.rs
docs/: RELEASE.md
docs/superpowers/plans/: 2026-04-19-ctx-phase1-mvp.md
scripts/: bench-ctx.ts
xtask/: Cargo.toml
xtask/src/: main.rs
