[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parse",
    "crates/embed",
    "crates/store",
    "crates/symbol",
    "crates/index",
    "crates/watch",
    "crates/query",
    "crates/mcp",
    "crates/cli",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
authors = ["Bryan Gillespie"]
repository = "https://github.com/CodeWithBryan/context"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# blake3 1.8+ pulls constant_time_eq 0.4 which requires rustc 1.95.
# Cargo.lock is pinned to blake3 1.5.4 to stay within our rust-toolchain = "1.94".
# Lift this when we bump the toolchain.
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
rmcp = { version = "1", features = ["server", "transport-io"] }
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-json = "0.24"
notify = "8"
notify-debouncer-full = "0.7"
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"
redb = "4"
tantivy = "0.26"
fastembed = "5"
gix = "0.81"
once_cell = "1"
parking_lot = "0.12"
walkdir = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
