[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parse",
    "crates/embed",
    "crates/store",
    "crates/symbol",
    "crates/index",
    "crates/watch",
    "crates/query",
    "crates/mcp",
    "crates/cli",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = ["Bryan Gillespie"]
repository = "https://github.com/CodeWithBryan/context"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# lancedb 0.27 → datafusion 52 requires blake3 ^1.8 → constant_time_eq 0.4 → rustc 1.95.
# Toolchain bumped to 1.95 in rust-toolchain.toml to accommodate this.
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
rmcp = { version = "1", features = ["server", "transport-io"] }
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
# Pin grammars to versions whose C parser uses ABI 14, compatible with tree-sitter 0.23.
tree-sitter-javascript = "0.23.0"
tree-sitter-css = "0.23.0"
tree-sitter-html = "0.23"
tree-sitter-json = "0.24"
notify = "8"
notify-debouncer-full = "0.7"
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"
redb = "4"
tantivy = "0.26"
fastembed = "5"
gix = "0.81"
futures = "0.3"
once_cell = "1"
parking_lot = "0.12"
walkdir = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
