[package]
name = "ctx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
ctx-core = { path = "../core" }
ctx-parse = { path = "../parse" }
ctx-embed = { path = "../embed" }
ctx-store = { path = "../store" }
ctx-index = { path = "../index" }
ctx-symbol = { path = "../symbol" }
ctx-watch = { path = "../watch" }
ctx-query = { path = "../query" }
ctx-mcp = { path = "../mcp" }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
gix.workspace = true
async-trait.workspace = true
blake3.workspace = true
self_update = { version = "0.41", default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
dirs.workspace = true
walkdir.workspace = true
regex = "1"

[lints]
workspace = true
