[package]
name = "ctx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
blake3.workspace = true
async-trait.workspace = true

[lints]
workspace = true
