[package]
name = "ctx-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
ctx-core = { path = "../core" }
fastembed.workspace = true
tokio.workspace = true
async-trait.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
