[package]
name = "ctx-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
ctx-core = { path = "../core" }
ctx-parse = { path = "../parse" }
ctx-embed = { path = "../embed" }
ctx-store = { path = "../store" }
ctx-symbol = { path = "../symbol" }
tokio.workspace = true
anyhow.workspace = true
walkdir.workspace = true
ignore = "0.4"
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
