[package]
name = "ctx-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
ctx-core = { path = "../core" }
redb.workspace = true
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
